--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
     <!-- Banner Video Section Ends-->
 
 
-      <!-- Machine Info Second section -->
-
+	  
+      <!-- Banner Image section Start-->
       <div class="container  py-md-4">
         <a class="ForFixedMenu" style="top: -104px;"></a>
         <div class="row">
@@ -306,12 +306,12 @@
             </div>
         </div>
     </div>
-    <!-- Second Section ------------------------>
+    <!-- Banner Image Section Ends -->
 
 
 
 
-    <!-- Section 1 -->
+    <!-- netskeme hydraulic section starts -->
     <div class="container-fluid">
       <div class="row bg-light py-md-5 py-sm-2">
         <div class="col-md-7 text-center p-2">
@@ -360,9 +360,11 @@
         </div>
       </div>
     </div>
-
-    <!-- Section 2 -->
-
+<!-- netskeme hydraulic section starts -->
+	  
+	  
+	  
+<!-- ManifoldEdge section Starts -->
     <div class="container-fluid">
       <div class="row py-md-5 py-sm-2 order-change" style="background-color: #f9f9f9;">
         <div
@@ -412,9 +414,12 @@
         </div>
       </div>
     </div>
-
-    <!-- Section 3 -->
-
+<!-- ManifoldEdge section Ends -->
+	  
+	  
+	  
+	  
+<!-- MD Tools Section starts -->
     <div class="container-fluid">
       <div class="row bg-light py-md-5 py-sm-2">
         <div class="col-md-7 order-md-1 text-center p-2">
@@ -463,9 +468,12 @@
         </div>
       </div>
     </div>
-
-    <!-- Info about company Section -->
-
+<!-- MD Tools Section Ends -->
+	  
+	  
+	  
+	  
+<!-- company Info Section starts -->
     <div class="container col-11 justify-content-evenly cmpny_info pt-5 pb-5">
       <div class="line-1"></div>
       <div class="row text-center compny-info">
@@ -490,9 +498,12 @@
       </div>
       <div class="line-2"></div>
     </div>
-
-    <!-- Owl Carousel ---------------------->
-    <!-- item 1 -->
+<!-- company Info Section Ends -->
+	  
+	  
+	  
+<!-- Owl Carousel Section Starts -->
+ <!-- item 1 -->
     <div id ="customer_carousel" class="owl-carousel owl-theme py-5" style="background-color: #f9f9f9;">
       <div class="item py-2 mb-3">
         <div class="card-img-t-l p-md-3 p-2 py-md-5 rounded-2 shadow">
@@ -530,7 +541,7 @@
         </div>
       </div>
 
-      <!-- Owl carousel 2 item -->
+  <!-- item 2 -->
       <div class="item py-2 mb-3">
         <div class="card-img-t-l p-md-3 p-2 py-md-5 rounded-2 shadow">
           <div class="card-img-t-l-icon">
@@ -562,7 +573,7 @@
         </div>
       </div>
 
-      <!-- Owl carousel item 3 -->
+  <!-- item 3 -->
       <div class="item py-2 mb-3">
         <div class="card-img-t-l p-md-3 p-2 py-md-5 rounded-2 shadow">
           <div class="card-img-t-l-icon">
@@ -597,7 +608,7 @@
         </div>
       </div>
 
-      <!-- Owl carousel item 4 -->
+  <!-- item 4 -->
       <div class="item py-2 mb-3">
         <div class="card-img-t-l p-md-3 p-2 py-md-5 rounded-2 shadow">
           <div class="card-img-t-l-icon">
@@ -634,7 +645,7 @@
       </div>
 
 
-      <!-- Owl carousel item 5 -->
+  <!-- item 5 -->
       <div class="item py-2 mb-3">
         <div class="card-img-t-l p-md-3 p-2 py-md-5 rounded-2 shadow">
           <div class="card-img-t-l-icon">
@@ -666,7 +677,7 @@
         </div>
       </div>
 
-       <!-- Owl carousel item 6 -->
+  <!-- item 6 -->
       <div class="item py-2 mb-3">
         <div class="card-img-t-l p-md-3 p-2 py-md-5 rounded-2 shadow">
           <div class="card-img-t-l-icon">
@@ -702,13 +713,12 @@
       </div>
       </div>
     </div>
-
+<!-- Owl Carousel Section Ends -->
 
 
 
     
-<!-- Footer Section -->
-
+<!-- Footer Section Starts -->
     <footer class="bg-light text-center text-lg-start footer">
   <!-- Grid container -->
   <div class="container p-4">
@@ -852,7 +862,7 @@
   </div>
   <!-- Copyright -->
 </footer>
-
+<!-- Footer Section Ends -->
 
           
 
